tests/paczka2/big_fuzzy/25915644.err
Error in line 3: NSNKbl8 A810 85,0
Error in line 2: GX4Ns A810 50,6
Error in line 26: UfZCJ A124 58,0
Error in line 42: NSNKbl8 A810 10,3
Error in line 45: A124 A22 315,9
Error in line 53: A124 A762 98,1
Error in line 72: A124 A810 62,9
Error in line 76: GX4Ns A762 68,7
Error in line 77: A124 A762 77,6
Error in line 86: PUzo A124 43,82
Error in line 84: A124 A124 11,8
Error in line 80: UfZCJ A762 27,5
Error in line 88: PUzo A124 144,7
Error in line 90: GX4Ns A124 0,9
Error in line 100: UfZCJ A762 56,2
Error in line 101: GX4Ns A22 520,6
Error in line 112: A124 A810 17,3
Error in line 141: PUzo A810 -1,2
Error in line 142: GX4Ns A810 56,5
Error in line 137: NSNKbl8 A22 44,3
Error in line 161: UfZCJ A124 90,9
Error in line 165: UfZCJ A810 43,3
Error in line 171: V7oW A124 9,0
Error in line 179: V7oW A22 17,27
Error in line 184: QK0 A22 48,5
Error in line 188: QK0 A810 41,8
Error in line 186: UfZCJ A810 2,3
Error in line 195: GX4Ns A762 77,7
Error in line 198: UfZCJ A124 26,5
Error in line 202: A124 A22 -3,5
Error in line 205: NSNKbl8 A124 49,6
Error in line 203: PUzo A762 83,4
Error in line 214: V7oW A22 113,1
Error in line 232: NSNKbl8 A762 62,1
Error in line 201: A124 A22 42,1
Error in line 244: GX4Ns A22 1,2
Error in line 241: V7oW A810 29,0
